# finux

./: README.md  com.github.srtomy.finux.json  com.srtomy.finux.json  index.md  meson.build
data/: com.github.srtomy.finux.appdata.xml.in  com.github.srtomy.finux.desktop.in  com.github.srtomy.finux.gschema.xml  com.srtomy.finux.appdata.xml.in  com.srtomy.finux.desktop.in  com.srtomy.finux.gschema.xml  finux.gresource.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: finux.gresource.xml  main.vala  meson.build  window.ui  window.ui~  window.vala
src/domain/: fluxocaixa.vala
test/: meson.build  testcaixa.vala  testcase.vala  testexample.vala  testmain.vala
